tests/testfiles/to_be_implemented/invalid_programs/615_undeclared_function.c
int main ()
{
    int a = 5;
    int b = 6;
    return foo(a,b);
}
int foo(int a, int b){
    return a +b;
}